fixed text align

--- a/public/stylesheets/resume.css
+++ b/public/stylesheets/resume.css
@@ -4,10 +4,11 @@
 
 }
 
-.section {
+#resume .section {
 	padding: 20px;
 	margin: 20px;
 	margin-top: 0px;
+	text-align: left;
 }
 
 .title {
